--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'net.datafaker:datafaker:1.6.0'
 }
 
 tasks.named('test') {
