--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+    id "me.champeau.jmh" version "0.6.8"
 }
 
 repositories {
@@ -20,6 +21,8 @@ dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
+    testImplementation 'org.openjdk.jmh:jmh-core:1.36'
+    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.36'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
